# leo

./: Cargo.toml
asg/: Cargo.toml
asg-passes/: Cargo.toml
asg-passes/src/constant_folding/: mod.rs
asg-passes/src/dead_code_elimination/: mod.rs
asg/src/: const_value.rs  scope.rs  type_.rs
asg/src/accesses/: array_access.rs  circuit_access.rs
asg/src/expression/: array_access.rs  array_init.rs  array_inline.rs  array_range_access.rs  binary.rs  call.rs  cast.rs  circuit_access.rs  circuit_init.rs  constant.rs  lengthof.rs  mod.rs  ternary.rs  tuple_access.rs  tuple_init.rs  unary.rs  variable_ref.rs
asg/src/program/: circuit.rs  function.rs  mod.rs
asg/src/reducer/: monoidal_director.rs  monoidal_reducer.rs  reconstructing_director.rs  reconstructing_reducer.rs  visitor.rs  visitor_director.rs
asg/src/statement/: assign.rs
ast-passes/src/import_resolution/: importer.rs  resolver.rs
ast/src/: annotation.rs
ast/src/expression/: mod.rs
ast/src/functions/: function.rs
ast/src/reducer/: reconstructing_director.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  test.rs
compiler/src/expression/: expression.rs
compiler/src/function/: function.rs  main_entrypoint.rs  mod.rs
compiler/src/global/: global.rs
compiler/src/program/: program.rs
compiler/src/statement/: statement.rs
errors/src/asg/: asg_errors.rs
errors/src/compiler/: compiler_errors.rs
gadgets/: Cargo.toml
grammar/: README.md  abnf-grammar.txt
imports/src/parser/: parse_package.rs
input/: Cargo.toml
input/src/: lib.rs  test.rs
input/src/ast/: mod.rs
input/src/ast/common/: mod.rs  span.rs
input/src/ast/values/: address.rs  boolean.rs  char_value.rs  mod.rs
input/src/errors/: parser.rs  syntax.rs
input/src/tokenizer/: lexer.rs  mod.rs  token.rs
leo/: context.rs  main.rs
leo/commands/: build.rs  clean.rs  mod.rs  prove.rs  run.rs  setup.rs  test.rs
leo/commands/package/: add.rs  publish.rs
leo/synthesizer/: circuit_synthesizer.rs  serialized_circuit.rs
parser/: Cargo.toml
parser/src/: lib.rs  test.rs
parser/src/parser/: context.rs  expression.rs  file.rs  statement.rs  type_.rs
parser/tests/serialization/: json.rs
state/: Cargo.toml
state/src/local_data_commitment/: local_data_commitment.rs
state/src/record_commitment/: dpc_record_values.rs  record_commitment.rs
stdlib/src/: lib.rs
test-framework/src/: runner.rs
tests/compiler/definition/: out_of_order_with_import.leo
wasm/: Cargo.toml
wasm/src/: lib.rs
(+8 files in other folders)
