[package]
name = "leo-input"
version = "1.5.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Input parser of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.thiserror]
version = "1.0"

[dependencies.tracing]
version = "0.1"

[dependencies.wasm-bindgen]
version = "0.2.74"

[dev-dependencies.criterion]
version = "0.3"

[dev-dependencies.serde_yaml]
version = "0.8"

[dev-dependencies.leo-test-framework]
path = "../test-framework"
version = "1.5.2"
