[package]
name = "leo-state"
version = "1.2.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "State parser of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-input]
path = "../input"
version = "1.2.3"

[dependencies.leo-ast]
path = "../ast"
version = "1.2.3"

[dependencies.snarkvm-algorithms]
path = "../../snarkVM/algorithms"
default-features = false

[dependencies.snarkvm-curves]
path = "../../snarkVM/curves"
default-features = false

[dependencies.snarkvm-dpc]
path = "../../snarkVM/dpc"
default-features = false

[dependencies.snarkvm-errors]
path = "../../snarkVM/errors"
default-features = false

[dependencies.snarkvm-models]
path = "../../snarkVM/models"
default-features = false

[dependencies.snarkvm-objects]
path = "../../snarkVM/objects"
default-features = false

[dependencies.snarkvm-utilities]
path = "../../snarkVM/utilities"

[dependencies.indexmap]
version = "1.6.1"
features = [ "serde-1" ]

[dependencies.rand]
version = "0.8"

[dependencies.rand_xorshift]
version = "0.3"

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.snarkvm-storage]
path = "../../snarkVM/storage"

[dev-dependencies.rand_core]
version = "0.6.2"
